[gd_scene load_steps=17 format=3 uid="uid://b8dsl308vfypc"]

[ext_resource type="Texture2D" uid="uid://dw3ly1k67a08g" path="res://icon.png" id="1_mbwpd"]
[ext_resource type="PackedScene" uid="uid://t6di5bpmga3k" path="res://Scenes/UI/healthBars.tscn" id="2_t76xf"]
[ext_resource type="PackedScene" uid="uid://d0cqqg2xcvlfi" path="res://Scenes/player/virtualController.tscn" id="3_47k4m"]
[ext_resource type="PackedScene" uid="uid://cbi3kopno23pf" path="res://Scenes/player/Player.tscn" id="4_8dqe4"]
[ext_resource type="Script" uid="uid://5jx35ahdhkmg" path="res://Scenes/Camera2D.gd" id="5_set2w"]
[ext_resource type="Script" uid="uid://bhdsoqumkl8sm" path="res://Scenes/system/trainingMode.gd" id="6_tauia"]
[ext_resource type="PackedScene" uid="uid://j1cpqciinjla" path="res://Scenes/system/save_state.tscn" id="7_cv1jc"]
[ext_resource type="Script" uid="uid://dm6pk6puqhfgi" path="res://Scenes/system/save_state.gd" id="8_3e5y6"]
[ext_resource type="PackedScene" uid="uid://dy8dp8tqcj1q6" path="res://Scenes/stages/stage_00.tscn" id="9_srhrf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_x1wml"]
texture = ExtResource("1_mbwpd")
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 8
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:0/1 = 1
0:0/1/flip_h = true
0:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, -32, -32, -32, 32, 32, 32)
0:0/2 = 2
0:0/2/flip_v = true
0:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, 32, 32, 32, -32, -32, -32)
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, -32, 32, -32, -32, 32, -32)
0:0/4 = 4
0:0/4/transpose = true
0:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -32, 32, 32, 32, 32, -32)
0:0/5 = 5
0:0/5/flip_h = true
0:0/5/transpose = true
0:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
0:0/6 = 6
0:0/6/flip_v = true
0:0/6/transpose = true
0:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -32, -32, 32, -32, 32, 32)
0:0/7 = 7
0:0/7/flip_h = true
0:0/7/flip_v = true
0:0/7/transpose = true
0:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, 32, -32, -32, -32, -32, 32)

[sub_resource type="TileSet" id="2"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 0
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_x1wml")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qgjce"]
size = Vector2(20, 9.61178)

[sub_resource type="Theme" id="Theme_y30xb"]
Label/colors/font_outline_color = Color(0, 0, 0, 1)

[sub_resource type="GDScript" id="GDScript_8u6lv"]
script/source = "extends Node

var nextFrame = false

#func _ready():
	#if Global.gameMode != Global.mode.TRAINING:
		#queue_free()

func _process(_delta):
	if get_tree().paused == false and nextFrame == true:
		get_tree().paused = true

	if Input.is_action_just_pressed(\"pause\"):
		if get_tree().paused == false:
			get_tree().paused = true
		elif get_tree().paused == true:
			nextFrame = false
			get_tree().paused = false
	
	if Input.is_action_just_pressed(\"frameAdvance\"):
		if get_tree().paused == false:
			get_tree().paused = true
		nextFrame = true
		get_tree().paused = false
		print(\"next frame\")
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1p8bk"]
size = Vector2(18.5035, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bl8iv"]
size = Vector2(1450, 25)

[node name="Main" type="Node2D"]
process_mode = 1
metadata/_edit_horizontal_guides_ = [270.0, 875.0, 832.0, 832.0]

[node name="Label" type="Label" parent="."]
offset_left = 738.0
offset_top = 19.0
offset_right = 900.0
offset_bottom = 77.0
text = "Bruh"

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource("2")
format = 2
layer_0/tile_data = PackedInt32Array(851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 196634, 0, 0, 262170, 0, 0, 327706, 0, 0, 393242, 0, 0, 458778, 0, 0, 524314, 0, 0, 589850, 0, 0, 655386, 0, 0, 720922, 0, 0, 786458, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 262147, 0, 0, 327683, 0, 0, 393219, 0, 0, 458755, 0, 0, 524291, 0, 0, 589827, 0, 0, 655363, 0, 0, 720899, 0, 0, 786435, 0, 0)

[node name="HPBars" parent="." instance=ExtResource("2_t76xf")]
offset_left = 704.0
offset_top = 272.0
offset_right = 704.0
offset_bottom = 272.0

[node name="VirtualController" parent="HPBars" instance=ExtResource("3_47k4m")]
position = Vector2(-312, 30)

[node name="Player" parent="HPBars/VirtualController" groups=["saveState"] instance=ExtResource("4_8dqe4")]
position = Vector2(391, 465)

[node name="VirtualController2" parent="HPBars" instance=ExtResource("3_47k4m")]
position = Vector2(856, 27)
player = 2

[node name="Player2" parent="HPBars/VirtualController2" instance=ExtResource("4_8dqe4")]
position = Vector2(-432, 474)

[node name="Camera2D" type="Camera2D" parent="HPBars"]
position = Vector2(256, 396)
rotation = 3.14159
scale = Vector2(1, -1)
zoom = Vector2(3, 3)
limit_left = 200
limit_top = 230
limit_right = 1725
limit_bottom = 875
position_smoothing_enabled = true
script = ExtResource("5_set2w")

[node name="cornerBounds" type="CharacterBody2D" parent="HPBars/Camera2D"]
position = Vector2(-956.002, -602.998)
collision_layer = 4
collision_mask = 4

[node name="rightBound" type="CollisionShape2D" parent="HPBars/Camera2D/cornerBounds"]
position = Vector2(592.001, 477.999)
scale = Vector2(4.40043, 59.7184)
shape = SubResource("RectangleShape2D_qgjce")

[node name="leftBound" type="CollisionShape2D" parent="HPBars/Camera2D/cornerBounds"]
position = Vector2(1320, 477.999)
scale = Vector2(4.39955, 59.7126)
shape = SubResource("RectangleShape2D_qgjce")

[node name="trainingMode" type="Node" parent="HPBars"]
script = ExtResource("6_tauia")

[node name="CanvasLayer" type="CanvasLayer" parent="HPBars/trainingMode"]

[node name="states" type="Node" parent="HPBars/trainingMode/CanvasLayer"]

[node name="p1States" type="VBoxContainer" parent="HPBars/trainingMode/CanvasLayer/states"]
offset_left = 656.0
offset_top = 106.0
offset_right = 724.0
offset_bottom = 345.0

[node name="p1state" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p1States"]
layout_mode = 2
theme = SubResource("Theme_y30xb")
text = "standing"

[node name="p1Knockdown" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p1States"]
layout_mode = 2

[node name="p1Grounded" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p1States"]
layout_mode = 2

[node name="p1Facing" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p1States"]
layout_mode = 2

[node name="p1BeingGrabed" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p1States"]
layout_mode = 2

[node name="p1JumpStartUp" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p1States"]
layout_mode = 2

[node name="p1Dashing" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p1States"]
layout_mode = 2

[node name="p1Jumping" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p1States"]
layout_mode = 2

[node name="p2States" type="VBoxContainer" parent="HPBars/trainingMode/CanvasLayer/states"]
offset_left = 1211.0
offset_top = 103.0
offset_right = 1279.0
offset_bottom = 315.0
alignment = 2

[node name="p2state" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p2States"]
layout_mode = 2
text = "standing"

[node name="p2Knockdown" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p2States"]
layout_mode = 2

[node name="p2Grounded" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p2States"]
layout_mode = 2

[node name="p2Facing" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p2States"]
layout_mode = 2

[node name="p2BeingGrabed" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p2States"]
layout_mode = 2

[node name="p2JumpStartup" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p2States"]
layout_mode = 2

[node name="p2Dashing" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p2States"]
layout_mode = 2

[node name="p2Jumping" type="Label" parent="HPBars/trainingMode/CanvasLayer/states/p2States"]
layout_mode = 2

[node name="tmrBlock" type="Timer" parent="HPBars/trainingMode/CanvasLayer"]
one_shot = true

[node name="lblStun" type="Label" parent="HPBars/trainingMode/CanvasLayer"]
offset_left = 837.0
offset_top = 1028.0
offset_right = 877.0
offset_bottom = 1063.0
theme_override_font_sizes/font_size = 25

[node name="lblStun2" type="Label" parent="HPBars/trainingMode/CanvasLayer"]
offset_left = 1036.0
offset_top = 1026.0
offset_right = 1076.0
offset_bottom = 1061.0
theme_override_font_sizes/font_size = 25

[node name="lbFrameAdvantage" type="Label" parent="HPBars/trainingMode/CanvasLayer"]
offset_left = 933.0
offset_top = 984.0
offset_right = 1003.0
offset_bottom = 1125.0
theme_override_font_sizes/font_size = 50
text = "0"

[node name="saveState" parent="HPBars" instance=ExtResource("7_cv1jc")]
process_mode = 3
script = ExtResource("8_3e5y6")

[node name="debugger" type="Node" parent="."]
process_mode = 3
script = SubResource("GDScript_8u6lv")

[node name="corners" type="StaticBody2D" parent="." groups=["ground"]]
collision_layer = 260
collision_mask = 260

[node name="leftCorner" type="CollisionShape2D" parent="corners"]
position = Vector2(216, 481)
scale = Vector2(3.99834, -43.6312)
shape = SubResource("RectangleShape2D_1p8bk")
debug_color = Color(0.340613, 0.404992, 0.39985, 0.42)

[node name="rightCorner" type="CollisionShape2D" parent="corners"]
position = Vector2(1707.99, 520)
scale = Vector2(3.99834, -43.6312)
shape = SubResource("RectangleShape2D_1p8bk")
debug_color = Color(0.340613, 0.404992, 0.39985, 0.42)

[node name="ColorRect2" type="ColorRect" parent="corners"]
offset_left = 175.0
offset_top = 46.0
offset_right = 1625.0
offset_bottom = 105.5
scale = Vector2(0.0551778, 14.53)
color = Color(0.381474, 0.274218, 0.0731015, 1)

[node name="ColorRect3" type="ColorRect" parent="corners"]
offset_left = 1665.0
offset_top = 34.0
offset_right = 3115.0
offset_bottom = 93.5
scale = Vector2(0.0551778, 14.53)
color = Color(0.381474, 0.274218, 0.0731015, 1)

[node name="ground" type="StaticBody2D" parent="." groups=["ground"]]
z_index = -5
collision_layer = 256
collision_mask = 256

[node name="ColorRect" type="ColorRect" parent="ground"]
offset_left = 230.0
offset_top = 837.0
offset_right = 1680.0
offset_bottom = 896.5
color = Color(0.381474, 0.274218, 0.0731015, 1)

[node name="ground" type="CollisionShape2D" parent="ground"]
position = Vector2(964, 843.125)
shape = SubResource("RectangleShape2D_bl8iv")
debug_color = Color(0.341176, 0.403922, 0.4, 0.419608)

[node name="stage00" parent="." instance=ExtResource("9_srhrf")]

[connection signal="timeout" from="HPBars/trainingMode/CanvasLayer/tmrBlock" to="HPBars/trainingMode" method="_on_tmr_block_timeout"]
